--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+%%writefile index.html
 <!DOCTYPE html>
 <html lang="zh-CN">
 <head>
@@ -130,7 +131,7 @@
         <input id="days" type="number" inputmode="numeric" />
         <button id="okBtn">确认</button>
       </div>
-      <div class="tip" id="tip">bb猪~四位数哟</div>
+      <div class="tip" id="tip">bb猪~四位数哟！再错！就内射猪猪</div>
       <div class="err" id="err"></div>
     </div>
   </div>
